--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,18 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.13",
-        "@types/node": "^16.11.11",
         "bcrypt": "^5.0.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "helmet": "^4.6.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.14",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.2"
+    },
+    "devDependencies": {
+        "@types/node": "^16.11.11"
     }
 }
