--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/express": "^4.17.13",
         "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "helmet": "^4.6.0",
