--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,15 @@
         "morgan": "^1.10.0",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
-        "typescript": "^4.5.2"
+        "typescript": "^4.5.2",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/jsonwebtoken": "^8.5.6",
+        "@types/mongoose": "^5.11.97",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^16.11.11"
     }
 }
