--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-query": "^3.34.0",
+        "react-router-dom": "^6.2.1",
         "react-scripts": "^4.0.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
