--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:1337",
     "dependencies": {
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
@@ -65,5 +64,6 @@
         "eslint-plugin-react-hooks": "^4.3.0",
         "prettier": "^2.3.2",
         "react-router": "^6.0.2"
-    }
+    },
+    "proxy": "http://127.0.0.1:1337/"
 }
