--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,18 @@
         "@testing-library/user-event": "^12.1.10",
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
+        "@types/react-beautiful-dnd": "^13.1.2",
+        "@types/uuid": "^8.3.4",
         "axios": "^0.24.0",
         "react": "^17.0.2",
+        "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
         "react-query": "^3.34.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^4.0.3",
+        "tslib": "^2.3.1",
         "typescript": "^4.1.2",
+        "uuid": "^8.3.2",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
