--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.13",
+        "@types/yup": "^0.29.13",
         "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
@@ -22,7 +23,8 @@
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.2",
-        "winston": "^3.3.3"
+        "winston": "^3.3.3",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
