--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "@types/jest": "^26.0.15",
+        "@types/lodash": "^4.14.179",
         "@types/node": "^12.0.0",
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/uuid": "^8.3.4",
         "axios": "^0.24.0",
+        "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
