--- a/server/package.json
+++ b/server/package.json
@@ -4,22 +4,34 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "nodemon index.ts",
+        "dev": "nodemon ./src/index.ts --ignore '../client/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.13",
-        "@types/node": "^16.11.11",
+        "@types/yup": "^0.29.13",
         "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "helmet": "^4.6.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.14",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
-        "typescript": "^4.5.2"
+        "typescript": "^4.5.2",
+        "winston": "^3.3.3",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/jsonwebtoken": "^8.5.6",
+        "@types/mongoose": "^5.11.97",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^16.11.11"
     }
 }
