--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "@types/uuid": "^8.3.4",
         "@vitejs/plugin-react": "^1.2.0",
         "axios": "^0.24.0",
+        "framer-motion": "^6.2.8",
         "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
