--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
         "@mui/icons-material": "^5.2.0",
+        "@mui/lab": "^5.0.0-alpha.75",
         "@mui/material": "^5.2.2",
         "@mui/styles": "^5.2.2",
         "@testing-library/jest-dom": "^5.11.4",
@@ -18,6 +19,7 @@
         "@types/uuid": "^8.3.4",
         "@vitejs/plugin-react": "^1.2.0",
         "axios": "^0.24.0",
+        "date-fns": "^2.28.0",
         "framer-motion": "^6.2.8",
         "lodash": "^4.17.21",
         "react": "^17.0.2",
@@ -26,6 +28,7 @@
         "react-query": "^3.34.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.0",
+        "react-select": "^5.2.2",
         "tslib": "^2.3.1",
         "typescript": "^4.1.2",
         "uuid": "^8.3.2",
