--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
+        "@hookform/resolvers": "^2.8.8",
         "@mui/icons-material": "^5.2.0",
         "@mui/lab": "^5.0.0-alpha.75",
         "@mui/material": "^5.2.2",
@@ -25,6 +26,8 @@
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
+        "react-dropzone": "^12.0.4",
+        "react-hook-form": "^7.29.0",
         "react-query": "^3.34.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.0",
@@ -32,7 +35,8 @@
         "tslib": "^2.3.1",
         "typescript": "^4.1.2",
         "uuid": "^8.3.2",
-        "web-vitals": "^1.0.1"
+        "web-vitals": "^1.0.1",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "vite",
