--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,8 @@
         "@types/uuid": "^8.3.4",
         "@vitejs/plugin-react": "^1.2.0",
         "axios": "^0.24.0",
-        "framer-motion": "^6.2.8",
         "date-fns": "^2.28.0",
+        "framer-motion": "^6.2.8",
         "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-beautiful-dnd": "^13.1.0",
@@ -31,7 +31,7 @@
         "react-query": "^3.34.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.0",
-        "react-select": "^5.2.2",
+        "react-toastify": "^8.2.0",
         "tslib": "^2.3.1",
         "typescript": "^4.1.2",
         "uuid": "^8.3.2",
