--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
         "react-query": "^3.34.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.0",
-        "react-select": "^5.2.2",
+        "react-toastify": "^8.2.0",
         "tslib": "^2.3.1",
         "typescript": "^4.1.2",
         "uuid": "^8.3.2",
