--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.2.0",
