--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -4,17 +4,13 @@
     "es2021": true,
     "node": true
   },
-  "extends": [
-    "airbnb-base",
-    "eslint:recommended",
-    "prettier"
-  ],
+  "extends": ["airbnb-base", "eslint:recommended", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["import", "react", "@typescript-eslint"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "no-console": "error",
     "import/prefer-default-export": 0,
@@ -25,10 +21,7 @@
   },
   "settings": {
     "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
+      "@typescript-eslint/parser": [".ts", ".tsx"]
     },
     "import/resolver": {
       "typescript": {
@@ -37,5 +30,5 @@
       }
     }
   },
-  "ignorePatterns": ["**/*.d.ts","**/*.hbs"]
+  "ignorePatterns": ["**/*.d.ts", "**/*.hbs"]
 }
