--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^9.8.1",
     "@types/express": "^4.17.13",
+    "@types/mime-types": "^2.1.1",
     "@types/yup": "^0.29.13",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -26,8 +27,11 @@
     "helmet": "^4.6.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "nanoid": "^3.3.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
@@ -42,6 +46,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.11",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
