--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,8 +11,11 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
     "emitDecoratorMetadata": true /* Emit design-type metadata for decorated declarations in source files. */,
-    "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */
+    "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
+    "strictPropertyInitialization": false,
+    "typeRoots": ["./src/types", "node_modules/@types"]
   },
-  "include": ["src/**/*.ts"],
+
+  "include": ["src/**/*.ts", "./src/types/*.d.ts"],
   "exclude": ["node_modules", "dist", "__tests__", "coverage"]
 }
