--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,37 +1,47 @@
 {
-  "root": true,
   "env": {
     "es2021": true,
     "node": true
   },
   "extends": [
     "airbnb-base",
-    "eslint:recommended",
+    "airbnb-typescript/base",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:eslint-comments/recommended",
+    "plugin:promise/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "project": "./tsconfig.eslint.json"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint", "eslint-comments", "promise", "import", "prettier"],
   "rules": {
-    "no-console": "error",
-    "import/prefer-default-export": 0,
-    "import/no-unresolved": 0,
-    "import/extensions": 0,
-    "no-return-await": 0,
-    "no-underscore-dangle": 0
+    "prettier/prettier": "error",
+    "import/prefer-default-export": "off",
+    "import/no-default-export": "off",
+    "no-use-before-define": [
+      "error",
+      {
+        "functions": false,
+        "classes": true,
+        "variables": true
+      }
+    ],
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-use-before-define": [
+      "error",
+      {
+        "functions": false,
+        "classes": true,
+        "variables": true,
+        "typedefs": true
+      }
+    ],
+    "import/no-extraneous-dependencies": "off"
   },
   "settings": {
-    "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
-    },
     "import/resolver": {
       "typescript": {
         "alwaysTryTypes": true,
@@ -39,5 +49,5 @@
       }
     }
   },
-  "ignorePatterns": ["**/*.d.ts","**/*.hbs"]
+  "ignorePatterns": ["**/*.d.ts", "**/*.hbs"]
 }
