--- a/server/package.json
+++ b/server/package.json
@@ -15,21 +15,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^9.8.1",
     "@types/express": "^4.17.13",
+    "@types/mime-types": "^2.1.1",
     "@types/yup": "^0.29.13",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "nanoid": "^3.3.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "winston": "^3.3.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.14.4",
+    "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -37,14 +49,16 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.11",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "plop": "^3.0.5",
     "prettier": "^2.6.0"
   }
