Dashboard basic reorder working functionality setup

--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -6,6 +6,6 @@
   "tabWidth": 2,
   "arrowParens": "avoid",
   "jsxSingleQuote": false,
-  "jsxBracketSameLine": false,
+  "bracketSameLine": false,
   "endOfLine": "auto"
 }
