--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "@mui/lab": "^5.0.0-alpha.75",
         "@mui/material": "^5.2.2",
         "@mui/styles": "^5.2.2",
+        "@react-oauth/google": "^0.2.1",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -27,6 +28,7 @@
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^17.0.2",
         "react-dropzone": "^12.0.4",
+        "react-google-login": "^5.2.2",
         "react-hook-form": "^7.29.0",
         "react-query": "^3.34.0",
         "react-router-dom": "^6.2.1",
